# fanwhy

./: README.md  pyproject.toml
src/fanwhy/: __init__.py  cli.py  core.py  sensors_integration.py
tests/: __init__.py  test_core.py  test_sensors.py
